project/stage/semantic_tests/reject/2_0_func_call.ul
void main() {
    int a;
    int b;
    foo(a, b);
}

void foo() {
}
